--- a/P5_dock_t1/test_1/JACO2_ros/dockerfile kinova robotics
+++ b/P5_dock_t1/test_1/JACO2_ros/dockerfile kinova robotics
@@ -8,3 +8,11 @@ RUN mkdir src
 RUN cd src
 RUN apt-get update
 RUN git clone -b noetic-devel git@github.com:Kinovarobotics/kinova-ros.git kinova-ros -y
+
+RUN cd ~/catkin_ws
+RUN catkin_make
+RUN sudo cp kinova_driver/udev/10-kinova-arm.rules /etc/udev/rules.d/
+RUN source ros_entrypoint.sh
+RUN source /catkin_ws/devel/setup.bash
+CMD roslaunch kinova_bringup kinova_robot.launch kinova_robotType:=j2n6s200 kinova_robotName:=RIGH_ARM kinova_robotSerial:=PJ00000001030703130
+
